# secure-document-room

./: .gitignore  ARCHITECTURE.md  Confidant_Azure_Architecture.drawio  DESIGN.md  DOCS_UPDATE_TRACE.md  HANDOFF.md  HOW_DOES_ALL_CONVERGE.md  LLM_CALL_FLOW.md  README.md  SAD.docx  SAD.md  SPEC.md  docker-compose.gpu.yml  docker-compose.prod.yml  start.sh
backend/: .env.example  Dockerfile  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routes/: audit.py  auth.py  documents.py  insights.py  invites.py  join.py  qa.py  rooms.py  session.py
backend/services/: audit_service.py  document_processor.py  email_service.py  insights_service.py  pdf_appendix.py  rag_engine.py  rate_limit.py  session_service.py
confidant landing page/: CONFIDANT_BLUEPRINT.md  index.html
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  auth.ts
infra/: Caddyfile  OPERATIONS.md  cloud-init-gpu.yaml  cloud-init.yaml  deploy-app.sh  destroy-all.sh  destroy-room.sh  down.sh  lib.sh  main.bicep  provision.sh  status.sh  up.sh
infra/v2/: OPERATIONS.md  core.bicep  deploy-core.sh  destroy-everything.sh  destroy-sandbox.sh  docker-compose.sandbox.yml  lib.sh  list-sandboxes.sh  main.bicep  sandbox-rbac.bicep  sandbox-table-role.bicep  sandbox.bicep  spawn-sandbox.sh  status.sh
infra/v2/functions/: .funcignore  README.md  function_app.py  requirements.txt
(+3 files in other folders)
